feat: добавить совместимый контракт календарных планов
